# release-integration-sdk-python

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  LICENSE  README.md  README_PYPI.md  ROBUSTNESS_CHANGES.md  pyproject.toml
.github/workflows/: python-test.yml
digitalai/release/: release_api_client.py
digitalai/release/api/v1/: release_api.py  test.py
digitalai/release/integration/: __init__.py  api_base_task.py  base_task.py  exceptions.py  ids.py  input_context.py  job_data_encryptor.py  k8s.py  kubernetes.py  logger.py  logging_config.py  masked_io.py  output_context.py  release_api_client.py  reporting_records.py  watcher.py  wrapper.py
digitalai/release/v1/: README.md  __init__.py  api_client.py  configuration.py  exceptions.py  model_utils.py  rest.py
digitalai/release/v1/api/: __init__.py  activity_logs_api.py  application_api.py  configuration_api.py  delivery_api.py  delivery_pattern_api.py  dsl_api.py  environment_api.py  environment_label_api.py  environment_reservation_api.py  environment_stage_api.py  facet_api.py  folder_api.py  permissions_api.py  phase_api.py  planner_api.py  release_api.py  release_group_api.py  report_api.py  risk_api.py  risk_assessment_api.py  roles_api.py  task_api.py  template_api.py  triggers_api.py  user_api.py
digitalai/release/v1/apis/: __init__.py
digitalai/release/v1/docs/: AbortRelease.md  ActivityLogEntry.md  ActivityLogsApi.md  ApplicationApi.md  ApplicationFilters.md  ApplicationForm.md  ApplicationView.md  Attachment.md  BaseApplicationView.md  BaseEnvironmentView.md  BlackoutMetadata.md  BlackoutPeriod.md  BulkActionResultView.md  ChangePasswordView.md  CiProperty.md  Comment.md  Comment1.md  CompleteTransition.md  Condition.md  Condition1.md  ConfigurationApi.md  ConfigurationFacet.md  ConfigurationView.md  CopyTemplate.md  CreateDelivery.md  CreateDeliveryStage.md  CreateRelease.md  Delivery.md  DeliveryApi.md  DeliveryFilters.md  DeliveryFlowReleaseInfo.md  DeliveryOrderMode.md  DeliveryPatternApi.md  DeliveryPatternFilters.md  DeliveryStatus.md  DeliveryTimeline.md  Dependency.md  DslApi.md  DuplicateDeliveryPattern.md  EnvironmentApi.md  (+112 more)
digitalai/release/v1/model/: __init__.py  abort_release.py  activity_log_entry.py  application_filters.py  application_form.py  application_view.py  attachment.py  base_application_view.py  base_environment_view.py  blackout_metadata.py  blackout_period.py  bulk_action_result_view.py  change_password_view.py  ci_property.py  comment.py  comment1.py  complete_transition.py  condition.py  condition1.py  configuration_facet.py  configuration_view.py  copy_template.py  create_delivery.py  create_delivery_stage.py  create_release.py  delivery.py  delivery_filters.py  delivery_flow_release_info.py  delivery_order_mode.py  delivery_pattern_filters.py  delivery_status.py  delivery_timeline.py  dependency.py  duplicate_delivery_pattern.py  environment_filters.py  environment_form.py  environment_label_filters.py  environment_label_form.py  environment_label_view.py  environment_reservation_form.py  (+88 more)
digitalai/release/v1/models/: __init__.py
digitalai/release/v2/: configuration_api.py  release_api.py  test.py
digitalai/release/v2/docs/: configuration_api.html  configuration_api.md  release_api.md
digitalai/release/v3/: configuration_api.py  global_variable.py  release.py  release_api.py  test.py
docs/: README.md  examples.md
docs/classes/: api_base_task.md  base_task.md
tests/release/: test_release_api_client.py
tests/release/api/: test_release_api_methods.py
tests/release/integration/: expected_output.json  hello.py  input.json  test_api_base_task.py  test_api_base_task_live.py  test_base_task.py  test_release_api_client.py  test_wrapper.py  test_wrapper_k8s.py
tests/release/integration/src/: hello.py
tests/release/integration/src/sample/: hello.py
