[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
  ".gitignore", "tests/*", ".github/*", "DEVELOPMENT.md"
]

[tool.hatch.build.targets.wheel]
packages = ["digitalai"]

[project]
name = "digitalai_release_sdk"
version = "26.1.0"
authors = [
  { name="Digital.ai", email="pypi-devops@digital.ai" },
]
description = "Digital.ai Release SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    'dataclasses-json>=0.6.7, <1.0.0',
    'pycryptodomex>=3.23.0, <4.0.0',
    'python-dateutil>=2.9.0, <3.0.0',
    'requests>=2.32.5, <3.0.0',
    'kubernetes>=35.0.0, <36.0.0'
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://digital.ai/"
Documentation = "https://docs.digital.ai/release/docs/category/python-sdk"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
