[project]
name = "digitalai_release_sdk"
version = "26.3.0b5"
description = "Digital.ai Release SDK"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Digital.ai", email = "pypi-devops@digital.ai" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent"
]
dependencies = [
    "digitalai-release-api-client==26.3.0b5",
    "dataclasses-json>=0.6.7, <1.0.0",
    "pycryptodomex>=3.23.0, <4.0.0",
    "python-dateutil>=2.9.0, <3.0.0",
    "requests>=2.32.5, <3.0.0",
    "kubernetes>=35.0.0, <36.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.urls]
Homepage = "https://digital.ai/"
Documentation = "https://docs.digital.ai/release/docs/category/python-sdk"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Files never shipped in any build artifact
[tool.hatch.build]
exclude = [
    "**/__pycache__",
    "**/*.py[cod]",
    ".coverage",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "tests",
    "docs",
    "DEVELOPMENT.md",
    "uv.lock",
    ".gitignore",
    ".github",
]

# Wheel ships only the digitalai package tree
[tool.hatch.build.targets.wheel]
packages = ["digitalai"]

# Source distribution: package code + project metadata only (no tests)
[tool.hatch.build.targets.sdist]
include = [
    "/digitalai",
    "/README.md",
    "/pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
